Work on UI, classes Dashboard and Note properties, and some code refactoring

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <title>Get things done, simply</title>
 </head>
@@ -10,7 +13,11 @@
     <main id="todo-app">
         <header>
             <h1>Get things done, simply.</h1>
-            <button type="button" id="new-dashboard-btn">New dashboard</button>
+            <button type="button" id="new-dashboard-btn" title="Create new tasks board">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                  </svg>Board</button>
         </header>
         <div id="dashboard-container">
             <dialog id="new-dashboard-dialog">
@@ -20,28 +27,6 @@
                     <button type="submit" id="create-dashboard-btn">Create</button>
                 </form>
             </dialog>
-            <div class="dashboard">
-                <nav class="dashboard-header">
-                    <button>Toggle</button>
-                    <h5>First Dashboard</h5>
-                    <span class="dashboard-btns">
-                        <button onclick="renderNewNote(this.parentElement.parentElement.parentElement)">New note</button>
-                        <button>Delete</button>
-                    </span>
-                </nav>
-                <div id="dashboard${dashboard.id}-notes-container" class="note-container">Nota 1</div>
-            </div>
-            <div class="dashboard">
-                <nav class="dashboard-header">
-                    <button>Toggle</button>
-                    <h5>First Dashboard</h5>
-                    <span class="dashboard-btns">
-                        <button>New note</button>
-                        <button>Delete</button>
-                    </span>
-                </nav>
-                <div id="dashboard${dashboard.id}-notes-container" class="notes container">Nota 1</div>
-            </div>
         </div>
     </main>
     <script src="./main.js"></script>
