Made deleteBoard() be able to delete board objects from the boardContainerArr array when clicked

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <main id="todo-app">
         <header>
             <h1>Get things done, simply.</h1>
-            <button type="button" id="new-dashboard-btn" title="Create new tasks board">
+            <button type="button" id="new-board-btn" title="Create new tasks board">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                     <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
                   </svg>Board</button>
         </header>
-        <div id="dashboard-container">
-            <dialog id="new-dashboard-dialog">
+        <div id="boards-container">
+            <dialog id="new-board-dialog">
                 <form method="dialog" style="text-align: center;">
                     <h4>Title</h4>
-                    <input type="text" id="dashboard-title-input">
-                    <button type="submit" id="create-dashboard-btn">Create</button>
+                    <input type="text" id="board-title-input">
+                    <button type="submit" id="create-board-btn">Create</button>
                 </form>
             </dialog>
         </div>
