--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <body>
     <main id="todo-app">
         <header>
-            <h1>Get things done, simply.</h1>
+            <span style="display: flex; flex-direction: row; align-items: center;">
+                <svg style="scale: 2;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+                    <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
+                </svg>
+                <h1 style="margin-left: 10px;">Simply, get things done.</h1>
+            </span>
             <button type="button" id="new-board-btn" title="Create new tasks board">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
